xsm_expl/eXpL/Frontend/y.output
   0  $accept : start $end

   1  start : TypeDefBlock ClassDefBlock GDeclBlock FDefBlock MainBlock
   2        | TypeDefBlock ClassDefBlock GDeclBlock MainBlock
   3        | TypeDefBlock GDeclBlock MainBlock
   4        | TypeDefBlock GDeclBlock FDefBlock MainBlock
   5        | TypeDefBlock GDeclBlock

   6  TypeDefBlock : TYPE TypeDefList ENDTYPE
   7               |

   8  TypeDefList : TypeDefList TypeDef
   9              | TypeDef

  10  TypeDef : TypeID '{' FieldDeclList '}'

  11  TypeID : ID

  12  FieldDeclList : FieldDeclList FieldDecl
  13                | FieldDecl

  14  FieldDecl : TypeName ID ';'

  15  TypeName : INT
  16           | STR
  17           | ID

  18  ClassDefBlock : CLASS ClassDefList ENDCLASS

  19  ClassDefList : ClassDefList ClassDef
  20               | ClassDef

  21  ClassDef : ClassName '{' ClassMembers MethodDefns '}'

  22  ClassMembers : DECL FieldDeclList MethodDeclList ENDDECL

  23  ClassName : ID
  24            | ID EXTENDS ID

  25  MethodDeclList : MethodDeclList MethodDecl
  26                 | MethodDecl

  27  MethodDecl : TypeName ID '(' ParamList ')' ';'

  28  MethodDefns : FDefBlock

  29  Slist : Slist Stmt ';'
  30        | Stmt ';'

  31  Stmt : inputStmt
  32       | outputStmt
  33       | assignStmt
  34       | ifStmt
  35       | whileStmt
  36       | doWhileStmt
  37       | forStmt
  38       | breakStmt
  39       | continueStmt
  40       | breakPointStmt
  41       | DynamicMemStmt

  42  inputStmt : READ expr

  43  outputStmt : WRITE expr
  44             | PRINTF '(' STRING ',' ID ')'

  45  assignStmt : ID '=' expr
  46             | ID '[' expr ']' '=' expr
  47             | ID '[' expr ']' '[' expr ']' '=' expr
  48             | MUL ID '=' expr
  49             | Field '=' expr

  50  retVal : expr

  51  retStmt : RETURN retVal ';'

  52  ifStmt : IF expr THEN Slist ELSE Slist ENDIF
  53         | IF expr THEN Slist ENDIF

  54  whileStmt : WHILE expr DO Slist ENDWHILE

  55  doWhileStmt : DO Slist WHILE expr ENDWHILE

  56  forStmt : FOR '(' assignStmt ';' expr ';' assignStmt ')' '{' Slist '}'

  57  breakStmt : BREAK

  58  continueStmt : CONTINUE

  59  breakPointStmt : BREAKPOINT

  60  GDeclBlock : DECL GDeclList ENDDECL
  61             | DECL ENDDECL
  62             |

  63  GDeclList : GDeclList GDecl
  64            | GDecl

  65  GDecl : GType GIDList ';'
  66        | GType TupleDecl GIDList ';'

  67  GType : INT
  68        | STR
  69        | ID
  70        | TUPLE ID

  71  GIDList : GIDList ',' GID
  72          | GID

  73  GID : ID
  74      | ID '[' NUM ']'
  75      | ID '[' NUM ']' '[' NUM ']'
  76      | ID '(' ParamList ')'
  77      | GPtrID
  78      | GPtrID '(' ParamList ')'

  79  GPtrID : MUL ID

  80  TupleDecl : '(' TupleFieldDeclList ')'

  81  TupleFieldDeclList : TupleFieldDeclList ',' TupleFieldDecl
  82                     | TupleFieldDecl

  83  TupleFieldDecl : TupleFieldType TupleFieldName

  84  TupleFieldType : INT
  85                 | STR

  86  TupleFieldName : ID

  87  ParamList : ParamList ',' Param
  88            | Param
  89            |

  90  Param : ParamType ID

  91  ParamType : INT
  92            | STR
  93            | INT MUL
  94            | STR MUL
  95            | ID

  96  ArgList : ArgList ',' Arg
  97          | Arg
  98          |

  99  Arg : expr

 100  FDefBlock : FDefBlock FDef
 101            | FDef

 102  FID : ID

 103  FDef : FuncSign '{' LDeclBlock FBody '}'

 104  FuncSign : FuncType FID '(' ParamList ')'

 105  FuncType : INT
 106           | STR
 107           | INT MUL
 108           | STR MUL
 109           | ID

 110  FBody : BEGIN_ Slist retStmt END ';'
 111        | BEGIN_ retStmt END ';'

 112  LDeclBlock : DECL LDeclList ENDDECL
 113             | DECL ENDDECL
 114             |

 115  LDeclList : LDeclList LDecl
 116            | LDecl

 117  LDecl : LType LIDList ';'
 118        | LType TupleDecl LIDList ';'

 119  LType : INT
 120        | STR
 121        | ID
 122        | TUPLE ID

 123  LIDList : LIDList ',' LID
 124          | LID

 125  LID : ID
 126      | ID '[' NUM ']'
 127      | MUL ID

 128  MainBlock : MainFunc '(' ')' '{' LDeclBlock MBody '}'

 129  MainFunc : INT MAIN

 130  MBody : BEGIN_ Slist retStmt END ';'

 131  DynamicMemStmt : AllocStmt
 132                 | FreeStmt
 133                 | InitializeStmt
 134                 | NewStmt

 135  AllocStmt : DynaMemID ALLOC '(' ')'

 136  FreeStmt : DynaMemID FREE '(' expr ')'

 137  InitializeStmt : DynaMemID INITIALIZE '(' ')'

 138  NewStmt : DynaMemID NEW '(' ID ')'

 139  DynaMemID : ID '='
 140            | ID '[' expr ']' '='
 141            | Field '='

 142  FieldFunction : Field '(' ArgList ')'

 143  Field : Field '.' ID
 144        | FieldID '.' ID
 145        | SELF '.' ID

 146  FieldID : ID
 147          | ID '[' expr ']'

 148  expr : expr PLUS expr
 149       | expr MINUS expr
 150       | expr MUL expr
 151       | expr DIV expr
 152       | expr MOD expr
 153       | expr EQ expr
 154       | expr NEQ expr
 155       | expr LT expr
 156       | expr LTE expr
 157       | expr GT expr
 158       | expr GTE expr
 159       | expr AND expr
 160       | expr OR expr
 161       | NOT expr
 162       | '(' expr ')'
 163       | Field
 164       | FieldFunction
 165       | ID '(' ArgList ')'
 166       | ID '[' expr ']'
 167       | ID '[' expr ']' '[' expr ']'
 168       | AMPERSAND ID
 169       | MUL ID
 170       | ID
 171       | NUM
 172       | STRING
 173       | NULL_

state 0
	$accept : . start $end  (0)
	TypeDefBlock : .  (7)

	TYPE  shift 1
	$end  reduce 7
	ID  reduce 7
	DECL  reduce 7
	INT  reduce 7
	STR  reduce 7
	CLASS  reduce 7

	start  goto 2
	TypeDefBlock  goto 3


state 1
	TypeDefBlock : TYPE . TypeDefList ENDTYPE  (6)

	ID  shift 4
	.  error

	TypeID  goto 5
	TypeDefList  goto 6
	TypeDef  goto 7


state 2
	$accept : start . $end  (0)

	$end  accept


state 3
	start : TypeDefBlock . ClassDefBlock GDeclBlock FDefBlock MainBlock  (1)
	start : TypeDefBlock . ClassDefBlock GDeclBlock MainBlock  (2)
	start : TypeDefBlock . GDeclBlock MainBlock  (3)
	start : TypeDefBlock . GDeclBlock FDefBlock MainBlock  (4)
	start : TypeDefBlock . GDeclBlock  (5)
	GDeclBlock : .  (62)

	DECL  shift 8
	CLASS  shift 9
	$end  reduce 62
	ID  reduce 62
	INT  reduce 62
	STR  reduce 62

	ClassDefBlock  goto 10
	GDeclBlock  goto 11


state 4
	TypeID : ID .  (11)

	.  reduce 11


state 5
	TypeDef : TypeID . '{' FieldDeclList '}'  (10)

	'{'  shift 12
	.  error


state 6
	TypeDefBlock : TYPE TypeDefList . ENDTYPE  (6)
	TypeDefList : TypeDefList . TypeDef  (8)

	ID  shift 4
	ENDTYPE  shift 13
	.  error

	TypeID  goto 5
	TypeDef  goto 14


state 7
	TypeDefList : TypeDef .  (9)

	.  reduce 9


state 8
	GDeclBlock : DECL . GDeclList ENDDECL  (60)
	GDeclBlock : DECL . ENDDECL  (61)

	ID  shift 15
	TUPLE  shift 16
	ENDDECL  shift 17
	INT  shift 18
	STR  shift 19
	.  error

	GType  goto 20
	GDeclList  goto 21
	GDecl  goto 22


state 9
	ClassDefBlock : CLASS . ClassDefList ENDCLASS  (18)

	ID  shift 23
	.  error

	ClassDef  goto 24
	ClassName  goto 25
	ClassDefList  goto 26


state 10
	start : TypeDefBlock ClassDefBlock . GDeclBlock FDefBlock MainBlock  (1)
	start : TypeDefBlock ClassDefBlock . GDeclBlock MainBlock  (2)
	GDeclBlock : .  (62)

	DECL  shift 8
	ID  reduce 62
	INT  reduce 62
	STR  reduce 62

	GDeclBlock  goto 27


state 11
	start : TypeDefBlock GDeclBlock . MainBlock  (3)
	start : TypeDefBlock GDeclBlock . FDefBlock MainBlock  (4)
	start : TypeDefBlock GDeclBlock .  (5)

	ID  shift 28
	INT  shift 29
	STR  shift 30
	$end  reduce 5

	FDefBlock  goto 31
	MainBlock  goto 32
	FDef  goto 33
	FuncSign  goto 34
	FuncType  goto 35
	MainFunc  goto 36


state 12
	TypeDef : TypeID '{' . FieldDeclList '}'  (10)

	ID  shift 37
	INT  shift 38
	STR  shift 39
	.  error

	TypeName  goto 40
	FieldDecl  goto 41
	FieldDeclList  goto 42


state 13
	TypeDefBlock : TYPE TypeDefList ENDTYPE .  (6)

	.  reduce 6


state 14
	TypeDefList : TypeDefList TypeDef .  (8)

	.  reduce 8


state 15
	GType : ID .  (69)

	.  reduce 69


state 16
	GType : TUPLE . ID  (70)

	ID  shift 43
	.  error


state 17
	GDeclBlock : DECL ENDDECL .  (61)

	.  reduce 61


state 18
	GType : INT .  (67)

	.  reduce 67


state 19
	GType : STR .  (68)

	.  reduce 68


state 20
	GDecl : GType . GIDList ';'  (65)
	GDecl : GType . TupleDecl GIDList ';'  (66)

	ID  shift 44
	MUL  shift 45
	'('  shift 46
	.  error

	GPtrID  goto 47
	TupleDecl  goto 48
	GIDList  goto 49
	GID  goto 50


state 21
	GDeclBlock : DECL GDeclList . ENDDECL  (60)
	GDeclList : GDeclList . GDecl  (63)

	ID  shift 15
	TUPLE  shift 16
	ENDDECL  shift 51
	INT  shift 18
	STR  shift 19
	.  error

	GType  goto 20
	GDecl  goto 52


state 22
	GDeclList : GDecl .  (64)

	.  reduce 64


state 23
	ClassName : ID .  (23)
	ClassName : ID . EXTENDS ID  (24)

	EXTENDS  shift 53
	'{'  reduce 23


state 24
	ClassDefList : ClassDef .  (20)

	.  reduce 20


state 25
	ClassDef : ClassName . '{' ClassMembers MethodDefns '}'  (21)

	'{'  shift 54
	.  error


state 26
	ClassDefBlock : CLASS ClassDefList . ENDCLASS  (18)
	ClassDefList : ClassDefList . ClassDef  (19)

	ID  shift 23
	ENDCLASS  shift 55
	.  error

	ClassDef  goto 56
	ClassName  goto 25


state 27
	start : TypeDefBlock ClassDefBlock GDeclBlock . FDefBlock MainBlock  (1)
	start : TypeDefBlock ClassDefBlock GDeclBlock . MainBlock  (2)

	ID  shift 28
	INT  shift 29
	STR  shift 30
	.  error

	FDefBlock  goto 57
	MainBlock  goto 58
	FDef  goto 33
	FuncSign  goto 34
	FuncType  goto 35
	MainFunc  goto 36


state 28
	FuncType : ID .  (109)

	.  reduce 109


state 29
	FuncType : INT .  (105)
	FuncType : INT . MUL  (107)
	MainFunc : INT . MAIN  (129)

	MAIN  shift 59
	MUL  shift 60
	ID  reduce 105


state 30
	FuncType : STR .  (106)
	FuncType : STR . MUL  (108)

	MUL  shift 61
	ID  reduce 106


state 31
	start : TypeDefBlock GDeclBlock FDefBlock . MainBlock  (4)
	FDefBlock : FDefBlock . FDef  (100)

	ID  shift 28
	INT  shift 29
	STR  shift 30
	.  error

	MainBlock  goto 62
	FDef  goto 63
	FuncSign  goto 34
	FuncType  goto 35
	MainFunc  goto 36


state 32
	start : TypeDefBlock GDeclBlock MainBlock .  (3)

	.  reduce 3


state 33
	FDefBlock : FDef .  (101)

	.  reduce 101


state 34
	FDef : FuncSign . '{' LDeclBlock FBody '}'  (103)

	'{'  shift 64
	.  error


state 35
	FuncSign : FuncType . FID '(' ParamList ')'  (104)

	ID  shift 65
	.  error

	FID  goto 66


state 36
	MainBlock : MainFunc . '(' ')' '{' LDeclBlock MBody '}'  (128)

	'('  shift 67
	.  error


state 37
	TypeName : ID .  (17)

	.  reduce 17


state 38
	TypeName : INT .  (15)

	.  reduce 15


state 39
	TypeName : STR .  (16)

	.  reduce 16


state 40
	FieldDecl : TypeName . ID ';'  (14)

	ID  shift 68
	.  error


state 41
	FieldDeclList : FieldDecl .  (13)

	.  reduce 13


state 42
	TypeDef : TypeID '{' FieldDeclList . '}'  (10)
	FieldDeclList : FieldDeclList . FieldDecl  (12)

	ID  shift 37
	INT  shift 38
	STR  shift 39
	'}'  shift 69
	.  error

	TypeName  goto 40
	FieldDecl  goto 70


state 43
	GType : TUPLE ID .  (70)

	.  reduce 70


state 44
	GID : ID .  (73)
	GID : ID . '[' NUM ']'  (74)
	GID : ID . '[' NUM ']' '[' NUM ']'  (75)
	GID : ID . '(' ParamList ')'  (76)

	'('  shift 71
	'['  shift 72
	','  reduce 73
	';'  reduce 73


state 45
	GPtrID : MUL . ID  (79)

	ID  shift 73
	.  error


state 46
	TupleDecl : '(' . TupleFieldDeclList ')'  (80)

	INT  shift 74
	STR  shift 75
	.  error

	TupleFieldType  goto 76
	TupleFieldDecl  goto 77
	TupleFieldDeclList  goto 78


state 47
	GID : GPtrID .  (77)
	GID : GPtrID . '(' ParamList ')'  (78)

	'('  shift 79
	','  reduce 77
	';'  reduce 77


state 48
	GDecl : GType TupleDecl . GIDList ';'  (66)

	ID  shift 44
	MUL  shift 45
	.  error

	GPtrID  goto 47
	GIDList  goto 80
	GID  goto 50


state 49
	GDecl : GType GIDList . ';'  (65)
	GIDList : GIDList . ',' GID  (71)

	','  shift 81
	';'  shift 82
	.  error


state 50
	GIDList : GID .  (72)

	.  reduce 72


state 51
	GDeclBlock : DECL GDeclList ENDDECL .  (60)

	.  reduce 60


state 52
	GDeclList : GDeclList GDecl .  (63)

	.  reduce 63


state 53
	ClassName : ID EXTENDS . ID  (24)

	ID  shift 83
	.  error


state 54
	ClassDef : ClassName '{' . ClassMembers MethodDefns '}'  (21)

	DECL  shift 84
	.  error

	ClassMembers  goto 85


state 55
	ClassDefBlock : CLASS ClassDefList ENDCLASS .  (18)

	.  reduce 18


state 56
	ClassDefList : ClassDefList ClassDef .  (19)

	.  reduce 19


state 57
	start : TypeDefBlock ClassDefBlock GDeclBlock FDefBlock . MainBlock  (1)
	FDefBlock : FDefBlock . FDef  (100)

	ID  shift 28
	INT  shift 29
	STR  shift 30
	.  error

	MainBlock  goto 86
	FDef  goto 63
	FuncSign  goto 34
	FuncType  goto 35
	MainFunc  goto 36


state 58
	start : TypeDefBlock ClassDefBlock GDeclBlock MainBlock .  (2)

	.  reduce 2


state 59
	MainFunc : INT MAIN .  (129)

	.  reduce 129


state 60
	FuncType : INT MUL .  (107)

	.  reduce 107


state 61
	FuncType : STR MUL .  (108)

	.  reduce 108


state 62
	start : TypeDefBlock GDeclBlock FDefBlock MainBlock .  (4)

	.  reduce 4


state 63
	FDefBlock : FDefBlock FDef .  (100)

	.  reduce 100


state 64
	FDef : FuncSign '{' . LDeclBlock FBody '}'  (103)
	LDeclBlock : .  (114)

	DECL  shift 87
	BEGIN_  reduce 114

	LDeclBlock  goto 88


state 65
	FID : ID .  (102)

	.  reduce 102


state 66
	FuncSign : FuncType FID . '(' ParamList ')'  (104)

	'('  shift 89
	.  error


state 67
	MainBlock : MainFunc '(' . ')' '{' LDeclBlock MBody '}'  (128)

	')'  shift 90
	.  error


state 68
	FieldDecl : TypeName ID . ';'  (14)

	';'  shift 91
	.  error


state 69
	TypeDef : TypeID '{' FieldDeclList '}' .  (10)

	.  reduce 10


state 70
	FieldDeclList : FieldDeclList FieldDecl .  (12)

	.  reduce 12


state 71
	GID : ID '(' . ParamList ')'  (76)
	ParamList : .  (89)

	ID  shift 92
	INT  shift 93
	STR  shift 94
	','  reduce 89
	')'  reduce 89

	ParamList  goto 95
	Param  goto 96
	ParamType  goto 97


state 72
	GID : ID '[' . NUM ']'  (74)
	GID : ID '[' . NUM ']' '[' NUM ']'  (75)

	NUM  shift 98
	.  error


state 73
	GPtrID : MUL ID .  (79)

	.  reduce 79


state 74
	TupleFieldType : INT .  (84)

	.  reduce 84


state 75
	TupleFieldType : STR .  (85)

	.  reduce 85


state 76
	TupleFieldDecl : TupleFieldType . TupleFieldName  (83)

	ID  shift 99
	.  error

	TupleFieldName  goto 100


state 77
	TupleFieldDeclList : TupleFieldDecl .  (82)

	.  reduce 82


state 78
	TupleDecl : '(' TupleFieldDeclList . ')'  (80)
	TupleFieldDeclList : TupleFieldDeclList . ',' TupleFieldDecl  (81)

	','  shift 101
	')'  shift 102
	.  error


state 79
	GID : GPtrID '(' . ParamList ')'  (78)
	ParamList : .  (89)

	ID  shift 92
	INT  shift 93
	STR  shift 94
	','  reduce 89
	')'  reduce 89

	ParamList  goto 103
	Param  goto 96
	ParamType  goto 97


state 80
	GDecl : GType TupleDecl GIDList . ';'  (66)
	GIDList : GIDList . ',' GID  (71)

	','  shift 81
	';'  shift 104
	.  error


state 81
	GIDList : GIDList ',' . GID  (71)

	ID  shift 44
	MUL  shift 45
	.  error

	GPtrID  goto 47
	GID  goto 105


state 82
	GDecl : GType GIDList ';' .  (65)

	.  reduce 65


state 83
	ClassName : ID EXTENDS ID .  (24)

	.  reduce 24


state 84
	ClassMembers : DECL . FieldDeclList MethodDeclList ENDDECL  (22)

	ID  shift 37
	INT  shift 38
	STR  shift 39
	.  error

	TypeName  goto 40
	FieldDecl  goto 41
	FieldDeclList  goto 106


state 85
	ClassDef : ClassName '{' ClassMembers . MethodDefns '}'  (21)

	ID  shift 28
	INT  shift 107
	STR  shift 30
	.  error

	FDefBlock  goto 108
	MethodDefns  goto 109
	FDef  goto 33
	FuncSign  goto 34
	FuncType  goto 35


state 86
	start : TypeDefBlock ClassDefBlock GDeclBlock FDefBlock MainBlock .  (1)

	.  reduce 1


state 87
	LDeclBlock : DECL . LDeclList ENDDECL  (112)
	LDeclBlock : DECL . ENDDECL  (113)

	ID  shift 110
	TUPLE  shift 111
	ENDDECL  shift 112
	INT  shift 113
	STR  shift 114
	.  error

	LType  goto 115
	LDeclList  goto 116
	LDecl  goto 117


state 88
	FDef : FuncSign '{' LDeclBlock . FBody '}'  (103)

	BEGIN_  shift 118
	.  error

	FBody  goto 119


state 89
	FuncSign : FuncType FID '(' . ParamList ')'  (104)
	ParamList : .  (89)

	ID  shift 92
	INT  shift 93
	STR  shift 94
	','  reduce 89
	')'  reduce 89

	ParamList  goto 120
	Param  goto 96
	ParamType  goto 97


state 90
	MainBlock : MainFunc '(' ')' . '{' LDeclBlock MBody '}'  (128)

	'{'  shift 121
	.  error


state 91
	FieldDecl : TypeName ID ';' .  (14)

	.  reduce 14


state 92
	ParamType : ID .  (95)

	.  reduce 95


state 93
	ParamType : INT .  (91)
	ParamType : INT . MUL  (93)

	MUL  shift 122
	ID  reduce 91


state 94
	ParamType : STR .  (92)
	ParamType : STR . MUL  (94)

	MUL  shift 123
	ID  reduce 92


state 95
	GID : ID '(' ParamList . ')'  (76)
	ParamList : ParamList . ',' Param  (87)

	','  shift 124
	')'  shift 125
	.  error


state 96
	ParamList : Param .  (88)

	.  reduce 88


state 97
	Param : ParamType . ID  (90)

	ID  shift 126
	.  error


state 98
	GID : ID '[' NUM . ']'  (74)
	GID : ID '[' NUM . ']' '[' NUM ']'  (75)

	']'  shift 127
	.  error


state 99
	TupleFieldName : ID .  (86)

	.  reduce 86


state 100
	TupleFieldDecl : TupleFieldType TupleFieldName .  (83)

	.  reduce 83


state 101
	TupleFieldDeclList : TupleFieldDeclList ',' . TupleFieldDecl  (81)

	INT  shift 74
	STR  shift 75
	.  error

	TupleFieldType  goto 76
	TupleFieldDecl  goto 128


state 102
	TupleDecl : '(' TupleFieldDeclList ')' .  (80)

	.  reduce 80


state 103
	GID : GPtrID '(' ParamList . ')'  (78)
	ParamList : ParamList . ',' Param  (87)

	','  shift 124
	')'  shift 129
	.  error


state 104
	GDecl : GType TupleDecl GIDList ';' .  (66)

	.  reduce 66


state 105
	GIDList : GIDList ',' GID .  (71)

	.  reduce 71


state 106
	FieldDeclList : FieldDeclList . FieldDecl  (12)
	ClassMembers : DECL FieldDeclList . MethodDeclList ENDDECL  (22)

	ID  shift 37
	INT  shift 38
	STR  shift 39
	.  error

	TypeName  goto 130
	FieldDecl  goto 70
	MethodDeclList  goto 131
	MethodDecl  goto 132


state 107
	FuncType : INT .  (105)
	FuncType : INT . MUL  (107)

	MUL  shift 60
	ID  reduce 105


state 108
	MethodDefns : FDefBlock .  (28)
	FDefBlock : FDefBlock . FDef  (100)

	ID  shift 28
	INT  shift 107
	STR  shift 30
	'}'  reduce 28

	FDef  goto 63
	FuncSign  goto 34
	FuncType  goto 35


state 109
	ClassDef : ClassName '{' ClassMembers MethodDefns . '}'  (21)

	'}'  shift 133
	.  error


state 110
	LType : ID .  (121)

	.  reduce 121


state 111
	LType : TUPLE . ID  (122)

	ID  shift 134
	.  error


state 112
	LDeclBlock : DECL ENDDECL .  (113)

	.  reduce 113


state 113
	LType : INT .  (119)

	.  reduce 119


state 114
	LType : STR .  (120)

	.  reduce 120


state 115
	LDecl : LType . LIDList ';'  (117)
	LDecl : LType . TupleDecl LIDList ';'  (118)

	ID  shift 135
	MUL  shift 136
	'('  shift 46
	.  error

	TupleDecl  goto 137
	LIDList  goto 138
	LID  goto 139


state 116
	LDeclBlock : DECL LDeclList . ENDDECL  (112)
	LDeclList : LDeclList . LDecl  (115)

	ID  shift 110
	TUPLE  shift 111
	ENDDECL  shift 140
	INT  shift 113
	STR  shift 114
	.  error

	LType  goto 115
	LDecl  goto 141


state 117
	LDeclList : LDecl .  (116)

	.  reduce 116


state 118
	FBody : BEGIN_ . Slist retStmt END ';'  (110)
	FBody : BEGIN_ . retStmt END ';'  (111)

	ID  shift 142
	READ  shift 143
	WRITE  shift 144
	PRINTF  shift 145
	MUL  shift 146
	BREAKPOINT  shift 147
	IF  shift 148
	WHILE  shift 149
	DO  shift 150
	BREAK  shift 151
	CONTINUE  shift 152
	FOR  shift 153
	RETURN  shift 154
	SELF  shift 155
	.  error

	Slist  goto 156
	Stmt  goto 157
	inputStmt  goto 158
	outputStmt  goto 159
	assignStmt  goto 160
	ifStmt  goto 161
	whileStmt  goto 162
	doWhileStmt  goto 163
	forStmt  goto 164
	breakStmt  goto 165
	continueStmt  goto 166
	breakPointStmt  goto 167
	retStmt  goto 168
	Field  goto 169
	InitializeStmt  goto 170
	AllocStmt  goto 171
	FreeStmt  goto 172
	DynaMemID  goto 173
	FieldID  goto 174
	NewStmt  goto 175
	DynamicMemStmt  goto 176


state 119
	FDef : FuncSign '{' LDeclBlock FBody . '}'  (103)

	'}'  shift 177
	.  error


state 120
	ParamList : ParamList . ',' Param  (87)
	FuncSign : FuncType FID '(' ParamList . ')'  (104)

	','  shift 124
	')'  shift 178
	.  error


state 121
	MainBlock : MainFunc '(' ')' '{' . LDeclBlock MBody '}'  (128)
	LDeclBlock : .  (114)

	DECL  shift 87
	BEGIN_  reduce 114

	LDeclBlock  goto 179


state 122
	ParamType : INT MUL .  (93)

	.  reduce 93


state 123
	ParamType : STR MUL .  (94)

	.  reduce 94


state 124
	ParamList : ParamList ',' . Param  (87)

	ID  shift 92
	INT  shift 93
	STR  shift 94
	.  error

	Param  goto 180
	ParamType  goto 97


state 125
	GID : ID '(' ParamList ')' .  (76)

	.  reduce 76


state 126
	Param : ParamType ID .  (90)

	.  reduce 90


state 127
	GID : ID '[' NUM ']' .  (74)
	GID : ID '[' NUM ']' . '[' NUM ']'  (75)

	'['  shift 181
	','  reduce 74
	';'  reduce 74


state 128
	TupleFieldDeclList : TupleFieldDeclList ',' TupleFieldDecl .  (81)

	.  reduce 81


state 129
	GID : GPtrID '(' ParamList ')' .  (78)

	.  reduce 78


state 130
	FieldDecl : TypeName . ID ';'  (14)
	MethodDecl : TypeName . ID '(' ParamList ')' ';'  (27)

	ID  shift 182
	.  error


state 131
	ClassMembers : DECL FieldDeclList MethodDeclList . ENDDECL  (22)
	MethodDeclList : MethodDeclList . MethodDecl  (25)

	ID  shift 37
	ENDDECL  shift 183
	INT  shift 38
	STR  shift 39
	.  error

	TypeName  goto 184
	MethodDecl  goto 185


state 132
	MethodDeclList : MethodDecl .  (26)

	.  reduce 26


state 133
	ClassDef : ClassName '{' ClassMembers MethodDefns '}' .  (21)

	.  reduce 21


state 134
	LType : TUPLE ID .  (122)

	.  reduce 122


state 135
	LID : ID .  (125)
	LID : ID . '[' NUM ']'  (126)

	'['  shift 186
	','  reduce 125
	';'  reduce 125


state 136
	LID : MUL . ID  (127)

	ID  shift 187
	.  error


state 137
	LDecl : LType TupleDecl . LIDList ';'  (118)

	ID  shift 135
	MUL  shift 136
	.  error

	LIDList  goto 188
	LID  goto 139


state 138
	LDecl : LType LIDList . ';'  (117)
	LIDList : LIDList . ',' LID  (123)

	','  shift 189
	';'  shift 190
	.  error


state 139
	LIDList : LID .  (124)

	.  reduce 124


state 140
	LDeclBlock : DECL LDeclList ENDDECL .  (112)

	.  reduce 112


state 141
	LDeclList : LDeclList LDecl .  (115)

	.  reduce 115


state 142
	assignStmt : ID . '=' expr  (45)
	assignStmt : ID . '[' expr ']' '=' expr  (46)
	assignStmt : ID . '[' expr ']' '[' expr ']' '=' expr  (47)
	DynaMemID : ID . '='  (139)
	DynaMemID : ID . '[' expr ']' '='  (140)
	FieldID : ID .  (146)
	FieldID : ID . '[' expr ']'  (147)

	'='  shift 191
	'['  shift 192
	'.'  reduce 146


state 143
	inputStmt : READ . expr  (42)

	ID  shift 193
	NUM  shift 194
	STRING  shift 195
	NULL_  shift 196
	MUL  shift 197
	AMPERSAND  shift 198
	NOT  shift 199
	SELF  shift 155
	'('  shift 200
	.  error

	expr  goto 201
	Field  goto 202
	FieldID  goto 174
	FieldFunction  goto 203


state 144
	outputStmt : WRITE . expr  (43)

	ID  shift 193
	NUM  shift 194
	STRING  shift 195
	NULL_  shift 196
	MUL  shift 197
	AMPERSAND  shift 198
	NOT  shift 199
	SELF  shift 155
	'('  shift 200
	.  error

	expr  goto 204
	Field  goto 202
	FieldID  goto 174
	FieldFunction  goto 203


state 145
	outputStmt : PRINTF . '(' STRING ',' ID ')'  (44)

	'('  shift 205
	.  error


state 146
	assignStmt : MUL . ID '=' expr  (48)

	ID  shift 206
	.  error


state 147
	breakPointStmt : BREAKPOINT .  (59)

	.  reduce 59


state 148
	ifStmt : IF . expr THEN Slist ELSE Slist ENDIF  (52)
	ifStmt : IF . expr THEN Slist ENDIF  (53)

	ID  shift 193
	NUM  shift 194
	STRING  shift 195
	NULL_  shift 196
	MUL  shift 197
	AMPERSAND  shift 198
	NOT  shift 199
	SELF  shift 155
	'('  shift 200
	.  error

	expr  goto 207
	Field  goto 202
	FieldID  goto 174
	FieldFunction  goto 203


state 149
	whileStmt : WHILE . expr DO Slist ENDWHILE  (54)

	ID  shift 193
	NUM  shift 194
	STRING  shift 195
	NULL_  shift 196
	MUL  shift 197
	AMPERSAND  shift 198
	NOT  shift 199
	SELF  shift 155
	'('  shift 200
	.  error

	expr  goto 208
	Field  goto 202
	FieldID  goto 174
	FieldFunction  goto 203


state 150
	doWhileStmt : DO . Slist WHILE expr ENDWHILE  (55)

	ID  shift 142
	READ  shift 143
	WRITE  shift 144
	PRINTF  shift 145
	MUL  shift 146
	BREAKPOINT  shift 147
	IF  shift 148
	WHILE  shift 149
	DO  shift 150
	BREAK  shift 151
	CONTINUE  shift 152
	FOR  shift 153
	SELF  shift 155
	.  error

	Slist  goto 209
	Stmt  goto 157
	inputStmt  goto 158
	outputStmt  goto 159
	assignStmt  goto 160
	ifStmt  goto 161
	whileStmt  goto 162
	doWhileStmt  goto 163
	forStmt  goto 164
	breakStmt  goto 165
	continueStmt  goto 166
	breakPointStmt  goto 167
	Field  goto 169
	InitializeStmt  goto 170
	AllocStmt  goto 171
	FreeStmt  goto 172
	DynaMemID  goto 173
	FieldID  goto 174
	NewStmt  goto 175
	DynamicMemStmt  goto 176


state 151
	breakStmt : BREAK .  (57)

	.  reduce 57


state 152
	continueStmt : CONTINUE .  (58)

	.  reduce 58


state 153
	forStmt : FOR . '(' assignStmt ';' expr ';' assignStmt ')' '{' Slist '}'  (56)

	'('  shift 210
	.  error


state 154
	retStmt : RETURN . retVal ';'  (51)

	ID  shift 193
	NUM  shift 194
	STRING  shift 195
	NULL_  shift 196
	MUL  shift 197
	AMPERSAND  shift 198
	NOT  shift 199
	SELF  shift 155
	'('  shift 200
	.  error

	expr  goto 211
	retVal  goto 212
	Field  goto 202
	FieldID  goto 174
	FieldFunction  goto 203


state 155
	Field : SELF . '.' ID  (145)

	'.'  shift 213
	.  error


state 156
	Slist : Slist . Stmt ';'  (29)
	FBody : BEGIN_ Slist . retStmt END ';'  (110)

	ID  shift 142
	READ  shift 143
	WRITE  shift 144
	PRINTF  shift 145
	MUL  shift 146
	BREAKPOINT  shift 147
	IF  shift 148
	WHILE  shift 149
	DO  shift 150
	BREAK  shift 151
	CONTINUE  shift 152
	FOR  shift 153
	RETURN  shift 154
	SELF  shift 155
	.  error
